ボタンの位置を調整しました

--- a/styleKOUNYU.css
+++ b/styleKOUNYU.css
@@ -17,6 +17,14 @@ position: fixed;
 text-align:center;
 }
 
+.cart{
+margin-left: 300px;
+}
+
+.kounyu{
+  margin-left:300px;
+}
+
 .TOPNIMODORU{
 text-align:center;
 }
