--- a/styleLOGIN.css
+++ b/styleLOGIN.css
@@ -20,21 +20,30 @@ text-align:center;
 }
 
 .fs-3{
-margin-left: 30%;
+margin-left: 20%;
 }
 
+.name{
+  margin-top: 2%;
+
+ }
+ .text{
+  margin-left: 20%;
+  width:50%;
+ }
 
 .login{
 text-align:center;
-margin-top: 70px;
+margin-top: 2%;
 }
+
+
 
 .owasure{
 margin-left: 60%;
-margin-top: 10px;
   }
 
   .sinki{
     text-align:center;
-    margin-top: 15px;
+    margin-top: 2%;
     }
