--- a/styleSYOUSAI.css
+++ b/styleSYOUSAI.css
@@ -15,8 +15,8 @@ position: fixed;
 
 .cartcheck{
 float:left;
-margin-left: 100px;
-margin-right: 250px;
+margin-left: 10%;
+margin-right: 2%;
 }
 
 .img{
@@ -25,8 +25,8 @@ margin-right: 250px;
 
 
 .row{
-    margin-top: 30px;
+    margin-top: 30%;
 }
 .syohin{
-padding-top: 130px;
+padding-top: 10%;
 }
