--- a/styleMYPAGE.css
+++ b/styleMYPAGE.css
@@ -18,31 +18,31 @@ body {
  
 
  .cart{
- margin-top:100px;
- margin-left: 400px;
+ margin-top:10%;
+ margin-left: 15%;
  float: left;
  }
 
  .favorite{
-    margin-top:100px;
-    margin-left: 70px;
+    margin-top:10%;
+    margin-left:10%;
+    margin-right:10% ;
     float: left;
 }
 
 .history{
-    margin-top:100px;
-    margin-left: 70px;
-    margin-right: 70px;
+    margin-top:10%;
+    margin-right: 7%;
     float: left;
 }
 
 .logout{
-    margin-top:100px;
-    margin-left: 70px;
+    margin-top:10%;
+    margin-left: 70%;
 }
 
 .button{
-    margin-top:100px;
+    margin-top:5%;
     text-align: right;
-    margin-right:80px;
+    margin-right:15%;
 }
