--- a/styleSYOUSAI.css
+++ b/styleSYOUSAI.css
@@ -16,13 +16,21 @@ position: fixed;
 .cartcheck{
 float:left;
 margin-left: 5%;
-margin-right: 2%;
+margin-right: 20%;
 }
 
 .img{
     margin-bottom: 50px;
 }
 
+.col-sm-2{
+margin-bottom: 5%;
+}
+
+.setumei{
+text-align: center;
+margin-right: 11%;
+}
 
 .row{
     margin-top: 30%;
