--- a/styleSYOUSAI.css
+++ b/styleSYOUSAI.css
@@ -15,21 +15,21 @@ position: fixed;
 
 .cartcheck{
 float:left;
-margin-left: 5%;
-margin-right: 20%;
+margin-left: 7%;
+margin-right: 5%;
 }
 
 .img{
-    margin-bottom: 50px;
+   margin-bottom: 5%;
 }
 
-.col-sm-2{
+
+.col-sm-4{
 margin-bottom: 5%;
 }
 
 .setumei{
-text-align: center;
-margin-right: 11%;
+text-align: left;
 }
 
 .row{
