画像などを追加しました

--- a/styleSYOUSAI.css
+++ b/styleSYOUSAI.css
@@ -24,6 +24,10 @@ margin-right: 5%;
 }
 
 
+.price{
+margin-top: 5%;
+}
+
 .col-sm-4{
 margin-bottom: 5%;
 }
@@ -36,7 +40,7 @@ text-align: left;
     margin-top: 30%;
 }
 .syohin{
-padding-top: 10%;
+padding-top: 5%;
 }
 
 .suuryo{
