--- a/styleSYOUSAI.css
+++ b/styleSYOUSAI.css
@@ -48,7 +48,7 @@ padding-top: 5%;
   width:5%;
   float:left;
 }
-
-.btn btn-outline-primary btn-lg{
-  white-space: nowrap;
+.d-block{
+   weight: 100px;
+   height:400px;
 }
