ｃｓｓを初期状態に戻しました

--- a/styleSYOUSAI_SALE.css
+++ b/styleSYOUSAI_SALE.css
@@ -14,62 +14,44 @@ position: fixed;
 
 
 .cartcheck{
-  max-width:100%;
-  height: auto;
 float:left;
 margin-left: 7%;
 margin-right: 5%;
 }
 
 .img{
-  max-width:100%;
-  height: auto;
-   padding-bottom: 5%;
+   margin-bottom: 5%;
 }
 
 
 
 
 .reprice{
-  max-width:100%;
-  height: auto;
-  padding-top: 80%;
+  margin-top: 80%;
 }
 
 .col-sm-4{
-  max-width:100%;
-  height: auto;
-padding-bottom: 5%;
+margin-bottom: 5%;
 }
 
 .setumei{
-  max-width:100%;
-  height: auto;
 	text-align: left;
 	  overflow: hidden;
 }
 
 .row{
-  max-width:100%;
-  height: auto;
-    padding-top: 55%;
+    margin-top: 55%;
 }
 .syohin{
-  max-width:100%;
-  height: auto;
 padding-top: 5%;
 }
 
 .price{
-  max-width:100%;
-  height: auto;
-  padding-right: 5%;
+  margin-top: 5%;
   }
 
 
 .delete{
-  max-width:100%;
-  height: auto;
   margin-right: 5%;
   text-decoration-line: line-through;
   text-decoration-style:double;
@@ -77,8 +59,6 @@ padding-top: 5%;
 }
 
 .suuryo{
-  max-width:100%;
-  height: auto;
   width:5%;
   float:left;
 }
@@ -88,13 +68,9 @@ padding-top: 5%;
   height:400px;
 }
 .otoiawase{
-  max-width:100%;
-  height: auto;
   float: left;
-  padding-right: 10%;
+  margin-right: 10%;
 }
 .okiniiri{
-  max-width:100%;
-  height: auto;
   float:right;
 }
