item_nameの幅をそろえようとしています

--- a/styleOKINIIRI.css
+++ b/styleOKINIIRI.css
@@ -20,12 +20,10 @@ text-align:center;
 .TOPNIMODORU{
 text-align:center;
 }
-
-
-
-
-
-
 .OKINIIRI{
 margin-top:150px;
+}
+
+.item_name{
+  width: 15%;
 }
