--- a/styleOKINIIRI.css
+++ b/styleOKINIIRI.css
@@ -34,6 +34,13 @@ margin-top:150px;
 .btn btn-outline-primary btn-lg{
   margin-left: 3%;
 }
+
+.col-sm-3{
+  float: left;
+}
+.col-sm-2{
+  float: left;
+}
 hr {
   border: none;
 }
