ログインしてご利用くださいを追加した

--- a/styleCART.css
+++ b/styleCART.css
@@ -16,6 +16,10 @@ position: fixed;
 .fs-1{
 text-align:center;
 }
+.fs-2{
+  text-align:center;
+  color: #ff0000;
+}
 
 .TOPNIMODORU{
 text-align:center;
