ログインしてご利用ください

--- a/styleOKINIIRI.css
+++ b/styleOKINIIRI.css
@@ -17,6 +17,11 @@ position: fixed;
 text-align:center;
 }
 
+.fs-2{
+  text-align:center;
+  color: #ff0000;
+}
+
 .TOPNIMODORU{
 text-align:center;
 }
