ログインしてご利用くださいを追加

--- a/styleRIREKI.css
+++ b/styleRIREKI.css
@@ -17,6 +17,15 @@ body {
  .fs-1{
     text-align:center;
     }
+
+  .fs-2{
+      text-align:center;
+      color: #ff0000;
+  }
+    
+  .TOPNIMODORU{
+    text-align:center;
+    }
 .kounyuu{
    text-align: center;
    }
