--- a/styleMYPAGE.css
+++ b/styleMYPAGE.css
@@ -19,26 +19,10 @@ body {
   text-align: center;
  }
 
- .cart{
- margin-top:10%;
- margin-left: 15%;
+ .col-sm-3{
+  margin-top:10%;
  }
-
- .favorite{
-    margin-top:10%;
-    margin-left:10%;
-    margin-right:10% ;
-}
-
-.history{
-    margin-top:10%;
-    margin-right: 7%;
-}
-
-.logout{
-    margin-top:10%;
-    margin-left: 70%;
-}
+ 
 
 .button{
     margin-top:5%;
